[package]
name = "tgtg-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
serde_json = "1.0.117"
tracing = "0.1.40"
thiserror = "1.0.61"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
