[package]
name = "tgtg-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde_json = "1.0.117"
tracing = "0.1.40"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}